Added input hidden code in index file

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
                             <div class="cleaner-input"><div id="cleaner-input" role="button"></div></div>
                         </div>
                     </div>
+                    <input type="hidden" name="sourceid" value="navclient">
+                    <input type="hidden" name="gfns" value="1">
                     <div class="buttons">
                         <input type="submit" value="Пошук Google" name="btnK">
                         <input type="submit" value="Мені пощастить" name="btnI">
